Fix OpenID login input field spacing

--- a/adlt/accounts/static/css/accounts.scss
+++ b/adlt/accounts/static/css/accounts.scss
@@ -19,7 +19,7 @@
 
     .input-group-addon {
         padding: 2px 5px;
-        line-height: 22px;
+        line-height: 21px;
         img {
             margin: 0;
             padding: 0;
